Use Java 20/21, other configs